fix: 修复若干错误 - 标题收起内容时,代码快和 callout 块无法收起 - 文章全览模式下,右下角全览按钮依旧存在 - 全览模式,点击关闭按钮无用 - 知识库编辑时输入性能问题 - 若干样式修复

--- a/src/components/PresentationMode/index.module.less
+++ b/src/components/PresentationMode/index.module.less
@@ -59,6 +59,7 @@
     overflow: visible;
     box-shadow: none;
     box-sizing: border-box;
+    --block-distance: 40px;
   }
 
   .presentationFooter {
@@ -102,11 +103,8 @@
     animation: fadeIn 0.3s ease-in-out;
   }
 
-  /* 回到顶部按钮 */
-  .backToTopButton {
+  .floatingButton {
     position: fixed;
-    bottom: 30px;
-    right: 30px;
     width: 50px;
     height: 50px;
     background-color: rgba(0, 0, 0, 0.3);
@@ -123,7 +121,6 @@
 
     &:hover {
       background-color: rgba(0, 0, 0, 0.5);
-      transform: scale(1.1);
     }
 
     svg {
@@ -132,35 +129,18 @@
     }
   }
 
+  /* 回到顶部按钮 */
+  .backToTopButton {
+    bottom: 30px;
+    right: 30px;
+  }
+
   /* 关闭按钮 */
   .closeIcon {
-    position: fixed;
-    top: 20px;
-    right: 30px;
-    width: 40px;
-    height: 40px;
-    background-color: rgba(0, 0, 0, 0.3);
-    color: white;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    z-index: 10;
-    animation: fadeIn 0.3s ease-in-out;
-    transition:
-      background-color 0.3s,
-      transform 0.3s;
-
-    &:hover {
-      transform: scale(1.1);
-      background-color: rgba(0, 0, 0, 0.5);
-    }
-
-    svg {
-      width: 20px;
-      height: 20px;
-    }
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
