--- a/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
+++ b/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
@@ -202,7 +202,7 @@
     box-shadow: var(--code-block-shadow);
     background-color: var(--code-block-bg-color);
     height: auto;
-    padding: 3em 0.75em 1.1em;
+    padding: 1em;
     border-radius: 5px;
     line-height: 1.8;
     font-size: 0.8em;
