--- a/src/components/Editor/extensions/code-block/components/SelectLanguage/index.module.less
+++ b/src/components/Editor/extensions/code-block/components/SelectLanguage/index.module.less
@@ -1,14 +1,16 @@
 .selectLanguage {
   font-size: 0.8em;
   opacity: 0.5;
-  padding: 4px 8px;
+  padding: 0.5em;
   width: fit-content;
-  border-radius: 4px;
+  border-radius: 0.25em;
   cursor: pointer;
   font-family: var(--mono-font);
+
   &.disable {
     cursor: default;
   }
+
   &:not(.disable):hover {
     background: var(--item-common-hover-bg);
   }
@@ -16,19 +18,21 @@
 
 .languageItem {
   display: flex;
-  height: 32px;
-  padding: 5px 12px;
+  height: 2em;
+  padding: 0.25em 0.5em;
   font-size: 0.9em;
   cursor: pointer;
   transition: all 0.2s;
-  border-radius: 4px;
+  border-radius: 0.25em;
   box-sizing: border-box;
   font-family: var(--mono-font);
 
   align-items: center;
+
   &.active {
     background: var(--item-common-hover-bg);
   }
+
   &:hover {
     background: var(--item-common-hover-bg);
   }
