--- a/src/components/Editor/extensions/callout/components/Callout/index.module.less
+++ b/src/components/Editor/extensions/callout/components/Callout/index.module.less
@@ -1,3 +1,53 @@
+:root {
+  --callout-tip-border: #009400;
+  --callout-info-border: #4cb3d4;
+  --callout-warning-border: #e6a700;
+  --callout-danger-border: #e13238;
+  --callout-note-border: #d4d5d8;
+
+  --callout-tip-bg: #e6ffe6;
+  --callout-info-bg: #eef9fd;
+  --callout-warning-bg: #fff8e6;
+  --callout-danger-bg: #ffebec;
+  --callout-note-bg: #fdfdfe;
+
+  --callout-tip-text: #003100;
+  --callout-info-text: #193c47;
+  --callout-warning-text: #4d3800;
+  --callout-danger-text: #4b1113;
+  --callout-note-text: #474748;
+
+  --callout-tip-icon: url("@/assets/icons/tip.svg");
+  --callout-info-icon: url("@/assets/icons/info.svg");
+  --callout-warning-icon: url("@/assets/icons/warning.svg");
+  --callout-danger-icon: url("@/assets/icons/danger.svg");
+  --callout-note-icon: url("@/assets/icons/note.svg");
+
+  --callout-tip-dark-border: #009400;
+  --callout-info-dark-border: #4cb3d4;
+  --callout-warning-dark-border: #e6a700;
+  --callout-danger-dark-border: #e13238;
+  --callout-note-dark-border: #d4d5d8;
+
+  --callout-tip-dark-bg: #003100;
+  --callout-info-dark-bg: #193c47;
+  --callout-warning-dark-bg: #4d3800;
+  --callout-danger-dark-bg: #4b1113;
+  --callout-note-dark-bg: #474748;
+
+  --callout-tip-dark-text: #e6ffe6;
+  --callout-info-dark-text: #eef9fd;
+  --callout-warning-dark-text: #fff8e6;
+  --callout-danger-dark-text: #ffebec;
+  --callout-note-dark-text: #fdfdfe;
+
+  --callout-tip-dark-icon: url("@/assets/icons/tip.svg");
+  --callout-info-dark-icon: url("@/assets/icons/info.svg");
+  --callout-warning-dark-icon: url("@/assets/icons/warning.svg");
+  --callout-danger-dark-icon: url("@/assets/icons/danger.svg");
+  --callout-note-dark-icon: url("@/assets/icons/note.svg");
+}
+
 .container {
   position: relative;
 
@@ -8,70 +58,78 @@
     border-left: 0.3em solid;
     border-color: var(--hint-border-color);
     border-radius: 0.5em;
+    color: var(--hint-text-color);
 
-    &.tip {
-      color: var(--hint-text-color);
-      --hint-border-color: #009400;
-      --hint-background-color: #e6ffe6;
-      --hint-text-color: #003100;
-      --icon-url: url("@/assets/icons/tip.svg");
+    &.dark {
+      &.tip {
+        --hint-border-color: var(--callout-tip-dark-border);
+        --hint-background-color: var(--callout-tip-dark-bg);
+        --hint-text-color: var(--callout-tip-dark-text);
+        --icon-url: var(--callout-tip-dark-icon);
+      }
+
+      &.info {
+        --hint-border-color: var(--callout-info-dark-border);
+        --hint-background-color: var(--callout-info-dark-bg);
+        --hint-text-color: var(--callout-info-dark-text);
+        --icon-url: var(--callout-info-dark-icon);
+      }
+
+      &.danger {
+        --hint-border-color: var(--callout-danger-dark-border);
+        --hint-background-color: var(--callout-danger-dark-bg);
+        --hint-text-color: var(--callout-danger-dark-text);
+        --icon-url: var(--callout-danger-dark-icon);
+      }
+
+      &.warning {
+        --hint-border-color: var(--callout-warning-dark-border);
+        --hint-background-color: var(--callout-warning-dark-bg);
+        --hint-text-color: var(--callout-warning-dark-text);
+        --icon-url: var(--callout-warning-dark-icon);
+      }
+
+      &.note {
+        --hint-border-color: var(--callout-note-dark-border);
+        --hint-background-color: var(--callout-note-dark-bg);
+        --hint-text-color: var(--callout-note-dark-text);
+        --icon-url: var(--callout-note-dark-icon);
+      }
     }
 
-    :global(:root[data-theme="dark"]) &.tip {
-      --hint-background-color: #003100;
-      --hint-text-color: #e6ffe6;
+    &.tip {
+      --hint-border-color: var(--callout-tip-border);
+      --hint-background-color: var(--callout-tip-bg);
+      --hint-text-color: var(--callout-tip-text);
+      --icon-url: var(--callout-tip-icon);
     }
 
     &.info {
-      color: var(--hint-text-color);
-      --hint-border-color: #4cb3d4;
-      --hint-background-color: #eef9fd;
-      --hint-text-color: #193c47;
-      --icon-url: url("@/assets/icons/info.svg");
-    }
-
-    :global(:root[data-theme="dark"]) &.info {
-      --hint-background-color: #193c47;
-      --hint-text-color: #eef9fd;
+      --hint-border-color: var(--callout-info-border);
+      --hint-background-color: var(--callout-info-bg);
+      --hint-text-color: var(--callout-info-text);
+      --icon-url: var(--callout-info-icon);
     }
 
     &.danger {
-      color: var(--hint-text-color);
-      --hint-border-color: #e13238;
-      --hint-background-color: #ffebec;
-      --hint-text-color: #4b1113;
-      --icon-url: url("@/assets/icons/danger.svg");
-    }
-
-    :global(:root[data-theme="dark"]) &.danger {
-      --hint-background-color: #4b1113;
-      --hint-text-color: #ffebec;
+      --hint-border-color: var(--callout-danger-border);
+      --hint-background-color: var(--callout-danger-bg);
+      --hint-text-color: var(--callout-danger-text);
+      --icon-url: var(--callout-danger-icon);
     }
 
     &.warning {
-      color: var(--hint-text-color);
-      --hint-border-color: #e6a700;
-      --hint-background-color: #fff8e6;
-      --hint-text-color: #4d3800;
-      --icon-url: url("@/assets/icons/warning.svg");
-    }
-
-    :global(:root[data-theme="dark"]) &.warning {
-      --hint-background-color: #4d3800;
-      --hint-text-color: #fff8e6;
+      --hint-border-color: var(--callout-warning-border);
+      --hint-background-color: var(--callout-warning-bg);
+      --hint-text-color: var(--callout-warning-text);
+      --icon-url: var(--callout-warning-icon);
     }
 
     &.note {
-      color: var(--hint-text-color);
-      --hint-border-color: #d4d5d8;
-      --hint-background-color: #fdfdfe;
-      --hint-text-color: #474748;
-      --icon-url: url("@/assets/icons/note.svg");
-    }
-
-    :global(:root[data-theme="dark"]) &.note {
-      --hint-background-color: #474748;
-      --hint-text-color: #fdfdfe;
+      --hint-border-color: var(--callout-note-border);
+      --hint-background-color: var(--callout-note-bg);
+      --hint-text-color: var(--callout-note-text);
+      --icon-url: var(--callout-note-icon);
     }
 
     .title {
@@ -98,4 +156,54 @@
   }
 
   @import "@/components/Editor/extensions/drag-common.less";
+}
+
+:global {
+  .callout-type-dropdown {
+    .ant-dropdown-menu {
+      backdrop-filter: blur(10px);
+      background-color: rgba(255, 255, 255, 0.7);
+    }
+
+    &.dark .ant-dropdown-menu {
+      background-color: rgba(0, 0, 0, 0.7);
+    }
+
+    .callout-type-item {
+      display: flex;
+      align-items: center;
+      gap: 0.5em;
+
+      .color-indicator {
+        width: 1em;
+        height: 1em;
+        border-radius: 0.25em;
+      }
+
+      &.disabled {
+        cursor: not-allowed;
+        opacity: 0.5;
+      }
+
+      &.tip .color-indicator {
+        background-color: var(--callout-tip-border);
+      }
+
+      &.info .color-indicator {
+        background-color: var(--callout-info-border);
+      }
+
+      &.warning .color-indicator {
+        background-color: var(--callout-warning-border);
+      }
+
+      &.danger .color-indicator {
+        background-color: var(--callout-danger-border);
+      }
+
+      &.note .color-indicator {
+        background-color: var(--callout-note-border);
+      }
+    }
+  }
 }
