fix: 演示模式下样式全局覆盖问题，放大下代码块滚动问题

--- a/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
+++ b/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
@@ -193,7 +193,7 @@
 .fullscreenCodeMirror {
   flex: 1;
   height: calc(100% - 2.5em);
-  overflow: hidden;
+  overflow: auto;
   position: relative;
   z-index: 1;
   padding: 1.25em;
