--- a/src/layouts/ShortSidebarLayout/components/AISearch/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/AISearch/index.module.less
@@ -1,4 +1,3 @@
-/* HTML: <div class="loader"></div> */
 .loadingContainer {
   height: 160px;
   display: flex;
@@ -112,24 +111,18 @@
 
         .item {
           position: relative;
+          height: 240px;
+          box-sizing: border-box;
           border-radius: 8px;
           padding: 16px;
           cursor: pointer;
+          background-color: transparent;
+          transition: background-color 0.2s;
+          display: flex;
+          flex-direction: column;
 
           &:hover {
             background-color: var(--common-hover-bg);
-          }
-
-          &:not(:last-child) {
-            &::after {
-              content: "";
-              position: absolute;
-              width: calc(100% - 32px);
-              height: 1px;
-              background-color: var(--line-color);
-              left: 16px;
-              bottom: -8px;
-            }
           }
         }
       }
