feat: 拆分 Paragraph 和 FormattedText 组件已实现性能优化

--- a/src/components/Editor/extensions/paragraph/components/HighlightText/index.module.less
+++ b/src/components/Editor/extensions/paragraph/components/HighlightText/index.module.less
@@ -1,7 +1,6 @@
 @import "@/components/Editor/extensions/hovering-item-common.less";
 
 .textContainer {
-  composes: item;
   width: 3.5em;
 
   .text {
@@ -9,5 +8,11 @@
     justify-content: center;
     align-items: center;
     gap: 0.375em;
+  }
+
+  .icon {
+    fill: currentColor;
+    width: 1em;
+    height: 1em;
   }
 }
