--- a/src/components/Editor/extensions/paragraph/components/ColorText/index.module.less
+++ b/src/components/Editor/extensions/paragraph/components/ColorText/index.module.less
@@ -1,7 +1,6 @@
 @import "@/components/Editor/extensions/hovering-item-common.less";
 
 .textContainer {
-  composes: item;
   width: 3.5em;
 
   .text {
@@ -9,5 +8,10 @@
     justify-content: center;
     align-items: center;
     gap: 0.375em;
+  }
+
+  .icon {
+    width: 1em;
+    height: 1em;
   }
 }
