feat: 性能优化， CodeBlock 懒加载，RightSidebar 性能优化

--- a/src/layouts/ShortSidebarLayout/components/RightSidebar/MessageItem/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/RightSidebar/MessageItem/index.module.less
@@ -2,16 +2,15 @@
   padding: 24px;
   background: #f5f6f9;
   border-radius: 12px;
-  width: 85%;
+  width: fit-content;
+  max-width: 85%;
+  box-sizing: border-box;
   align-self: flex-start;
   overflow: hidden;
 
   &.userMessage {
-    align-self: flex-end;
-  }
-
-  &.assistantMessage {
-    align-self: flex-start;
+    margin-left: auto;
+    text-align: right;
   }
 
   .messageContent {
