--- a/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
+++ b/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
@@ -239,3 +239,21 @@
   width: 1.75em;
   height: 1.75em;
 }
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  font-size: 14px;
+  color: #888;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+}
+
+.dark {
+  .loading {
+    background-color: #333;
+    color: #aaa;
+  }
+}
