feat: 添加聊天功能和右侧边栏支持 - 实现右侧边栏的标签页管理，支持文档、卡片和文章的查看 - 优化右侧边栏的状态管理，使用 Zustand 进行持久化存储 - 移除不再使用的 WindowControl 组件

--- a/src/editor-extensions/card-link/components/CardContent/index.module.less
+++ b/src/editor-extensions/card-link/components/CardContent/index.module.less
@@ -1,14 +1,14 @@
 .cardContentContainer {
-  border: 1.5em solid transparent;
+  width: 400px;
+  padding: 8px 12px;
+  max-height: 400px;
   overflow-y: auto;
-  max-height: 18.75em;
-  max-width: 25em;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
 }
 
 .notFound {
-  color: red;
+  width: 200px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
