--- a/src/layouts/ShortSidebarLayout/components/CardLinkGraph/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/CardLinkGraph/index.module.less
@@ -9,31 +9,9 @@
   width: 100%;
   height: 100%;
   display: flex;
-  --graph-width: 100%;
-  &.showEdit {
-    // 600px 和 50%，取最大值
-    --graph-width: calc(max(600px, 50%));
-  }
   .graph {
-    width: var(--graph-width);
+    width: 100%;
     height: 100%;
-    transition: width 0.3s;
     background: var(--main-bg-color);
-  }
-  .edit {
-    width: calc(100% - var(--graph-width));
-    height: 100%;
-    flex: none;
-    display: flex;
-    gap: 20px;
-    transition: width 0.3s;
-  }
-}
-
-@container card-graph-container (max-width: 1280px) {
-  .container {
-    &.showEdit {
-      --graph-width: 0px;
-    }
   }
 }
