--- a/src/layouts/components/Titlebar/index.module.less
+++ b/src/layouts/components/Titlebar/index.module.less
@@ -5,12 +5,11 @@
   display: flex;
   align-items: center;
   gap: 8px;
+
   &.sidebarHide {
     margin-left: 64px;
   }
-  .windowControl {
-    margin-left: auto;
-  }
+
   .item {
     -webkit-app-region: no-drag;
     width: 20px;
@@ -19,6 +18,7 @@
     align-items: center;
     justify-content: center;
     font-size: 12px;
+
     &:hover {
       background-color: var(--common-hover-bg);
       border-radius: 4px;
@@ -27,31 +27,18 @@
   }
 }
 
-.quitFocus {
-  position: fixed;
-  width: 100vw;
-  height: 100px;
+.right {
   display: flex;
-  justify-content: center;
+  gap: 12px;
   align-items: center;
-  left: 0;
-  top: -100%;
-  transition: top 0.3s ease-in-out;
-  -webkit-app-region: no-drag;
-  .quitIcon {
-    opacity: 0.7;
-    background-color: var(--primary-bg-color);
-    color: var(--text-color);
-    width: 48px;
-    height: 48px;
-    cursor: pointer;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    filter: invert(1);
-  }
-  &.show {
-    top: 60px;
+  margin-left: auto;
+}
+
+.pin {
+  transform: rotate(0deg);
+  transition: transform 0.2s;
+
+  &.onTop {
+    transform: rotate(-45deg);
   }
 }
