--- a/src/layouts/ShortSidebarLayout/components/CardView/CardTreePanel/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/CardView/CardTreePanel/index.module.less
@@ -3,7 +3,7 @@
   border: 20px solid transparent;
   box-sizing: border-box;
   transition: all 0.3s;
-  width: var(--card-tree-width);
+  width: 240px;
   height: 100%;
   overflow: auto;
 
