--- a/src/layouts/components/EditCard/index.module.less
+++ b/src/layouts/components/EditCard/index.module.less
@@ -20,6 +20,14 @@
   }
 }
 
+.loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @container cardsManagement (max-width: 1080px) {
   .editCardContainer {
     max-width: calc(44.44444% + 240px);
