--- a/src/layouts/ShortSidebarLayout/components/CardView/CardListPanel/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/CardView/CardListPanel/index.module.less
@@ -1,21 +1,19 @@
 .cardContainer {
-  width: var(--card-grid-width);
+  width: 100%;
   height: 100%;
   box-sizing: border-box;
   position: relative;
+}
 
-  .cardList {
-    padding: 20px 40px;
-    height: 100%;
-    max-width: 720px;
-    margin: 0 auto;
-  }
-
-  .createCard {
-    margin-top: 20px;
-  }
+.cardList {
+  padding: 20px 40px;
+  height: 100%;
+  max-width: 720px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .floatButton {
-  position: absolute;
+  bottom: 40px;
+  right: 24px;
 }
