--- a/src/layouts/ShortSidebarLayout/components/RightSidebar/tabs/CardTab/CardsViewer/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/RightSidebar/tabs/CardTab/CardsViewer/index.module.less
@@ -3,6 +3,10 @@
   overflow: hidden;
 
   :global {
+    .ant-tabs-nav {
+      height: unset;
+    }
+
     .ant-tabs {
       height: 100%;
       display: flex;
