--- a/src/layouts/ShortSidebarLayout/index.module.less
+++ b/src/layouts/ShortSidebarLayout/index.module.less
@@ -7,6 +7,8 @@
   --right-sidebar-width: 0px;
 
   .sidebar {
+    width: 60px;
+    box-sizing: border-box;
     flex-shrink: 0;
     height: 100%;
     background: var(--sidebar-background);
@@ -21,27 +23,21 @@
     width: 100%;
     box-sizing: border-box;
     overflow: hidden;
-    border-radius: 8px;
-    overflow: hidden;
     background: var(--main-bg-color);
 
     .mainContent {
       flex: 1;
       max-width: 100%;
-      height: calc(100% - 8px);
-      margin: 0 8px 8px 0;
-      border-radius: 8px;
-      box-shadow: var(--shadow);
+      height: 100%;
       box-sizing: border-box;
     }
 
     .rightSidebar {
       flex-shrink: 0;
       height: 100%;
-      margin: 0 8px 8px 0;
       overflow: hidden;
-      border-radius: 8px;
       display: flex;
+      background: var(--sidebar-background);
 
       &.hide {
         margin-right: 0;
