--- a/src/layouts/ShortSidebarLayout/components/ChatSidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/ChatSidebar/index.module.less
@@ -5,7 +5,7 @@
 
   .wrapContainer {
     height: calc(100% - 8px);
-    background: var(--main-bg-color);
+    background: var(--primary-bg-color);
     margin: 0 8px 8px 0;
     border-radius: 8px;
     box-shadow: var(--shadow);
