--- a/src/layouts/ShortSidebarLayout/components/RightSidebar/RightSidebarContent/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/RightSidebar/RightSidebarContent/index.module.less
@@ -3,7 +3,12 @@
   margin: 0 20px;
   overflow: hidden;
   box-sizing: border-box;
+
   :global {
+    .ant-tabs-nav {
+      height: 60px;
+    }
+
     .ant-tabs {
       height: 100%;
       display: flex;
