--- a/src/layouts/ShortSidebarLayout/components/RightSidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/RightSidebar/index.module.less
@@ -5,7 +5,7 @@
 
 .contentWrapper {
   height: 100%;
-  background-color: var(--main-bg-color);
+  background-color: var(--primary-bg-color);
   display: flex;
   flex-direction: column;
   overflow: hidden;
