--- a/src/pages/CardDetailView/EditCard/index.module.less
+++ b/src/pages/CardDetailView/EditCard/index.module.less
@@ -1,7 +1,10 @@
 .editCardContainer {
   position: relative;
   margin: 0 auto;
-  max-width: 720px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 
   .time {
     margin-bottom: 24px;
@@ -9,14 +12,37 @@
     gap: 10px;
     opacity: 0.8;
     font-size: 0.9em;
+    flex-shrink: 0;
+    margin: 0 auto;
+    width: 100%;
+    max-width: min(100%, 800px);
+    padding: 20px;
+    box-sizing: border-box;
+  }
+
+  .editorContainer {
+    flex: 1;
+    width: 100%;
+    overflow: auto;
   }
 
   .editor {
     width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    width: 100%;
+    max-width: min(100%, 800px);
   }
 
   .addTag {
     margin-top: 16px;
+    flex-shrink: 0;
+    margin: 0 auto;
+    width: 100%;
+    max-width: min(100%, 800px);
+    padding: 20px;
+    box-sizing: border-box;
   }
 }
 
@@ -28,20 +54,12 @@
   align-items: center;
 }
 
-@container cardsManagement (max-width: 1080px) {
-  .editCardContainer {
-    max-width: calc(44.44444% + 240px);
-  }
-}
-
-@container cardsManagement (max-width: 540px) {
-  .editCardContainer {
-    max-width: calc(100% - 60px);
-  }
-}
-
-@container cardsManagement (max-width: 420px) {
-  .time {
-    flex-direction: column !important;
-  }
+.statusBar {
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 20px;
+  right: 35px;
 }
