--- a/src/pages/CardDetailView/index.module.less
+++ b/src/pages/CardDetailView/index.module.less
@@ -26,10 +26,9 @@
 }
 
 .cardContainer {
-  max-width: min(800px, 100%);
-  margin: 0 auto;
-  padding: 0 40px;
-  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .loading,
@@ -41,9 +40,15 @@
   font-size: 16px;
 }
 
+.titlebar {
+  height: 60px;
+  flex-shrink: 0;
+  width: 100%;
+}
+
 .breadcrumb {
-  height: 48px;
-  padding-left: 16px;
+  height: 60px;
+  padding-left: 40px;
   display: flex;
   align-items: center;
 }
