--- a/src/pages/CardListView/CardListPanel/index.module.less
+++ b/src/pages/CardListView/CardListPanel/index.module.less
@@ -1,16 +1,19 @@
 .cardContainer {
+  flex: 1;
   width: 100%;
-  height: 100%;
+  // height: 100%;
   box-sizing: border-box;
   position: relative;
+  overflow: hidden;
 }
 
 .cardList {
-  padding: 20px 40px;
+  padding: 0 40px 20px;
   height: 100%;
   max-width: 800px;
   margin: 0 auto;
   box-sizing: border-box;
+  overflow: auto;
 }
 
 .floatButton {
