--- a/src/pages/DailyNoteView/index.module.less
+++ b/src/pages/DailyNoteView/index.module.less
@@ -1,34 +1,74 @@
 .viewContainer {
+  flex: 1;
   width: 100%;
-  height: 100%;
   display: flex;
   --calendar-width: 100%;
+  box-sizing: border-box;
+  padding: 0 24px 24px;
+
   &.showEdit {
     --calendar-width: calc(100% - 600px);
   }
+
   .calendarContainer {
     width: var(--calendar-width);
     height: 100%;
     transition: width 0.3s;
   }
+
   .edit {
     width: calc(100% - var(--calendar-width));
     height: 100%;
     transition: width 0.3s;
+    overflow: hidden;
+    box-sizing: border-box;
   }
 }
 
 .cellDailyNote {
   position: relative;
+
   .delete {
     display: none;
     position: absolute;
     top: 0;
     right: 0;
   }
+
   &:hover {
     .delete {
       display: block;
     }
+  }
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.titlebar {
+  width: 100%;
+  height: 60px;
+  flex-shrink: 0;
+}
+
+.breadcrumb {
+  height: 60px;
+  padding-left: 24px;
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumbItem {
+  cursor: pointer;
+  transition: all 0.3s ease;
+  padding: 4px 8px;
+  border-radius: 4px;
+
+  &:hover {
+    background-color: var(--common-hover-bg);
   }
 }
