--- a/src/pages/HomeView/index.module.less
+++ b/src/pages/HomeView/index.module.less
@@ -1,11 +1,47 @@
 .container {
-  border: 24px solid transparent;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
-  overflow-y: auto;
-  &::-webkit-scrollbar {
-    display: none;
+  overflow-y: hidden;
+
+  .titlebar {
+    width: 100%;
+    height: 60px;
+    flex-shrink: 0;
+  }
+
+  .breadcrumb {
+    height: 60px;
+    padding-left: 24px;
+    display: flex;
+    align-items: center;
+  }
+
+  .breadcrumbItem {
+    cursor: pointer;
+    transition: all 0.3s ease;
+    padding: 4px 8px;
+    border-radius: 4px;
+
+    &:hover {
+      background-color: var(--common-hover-bg);
+    }
+  }
+
+  .content {
+    flex: 1;
+    width: 100%;
+    overflow-y: auto;
+    border: 24px solid transparent;
+    border-top: 0;
+    box-sizing: border-box;
+    box-sizing: border-box;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   .calendar {
@@ -19,6 +55,7 @@
     flex-direction: column;
     gap: 8px;
   }
+
   .item {
     height: 36px;
     overflow: hidden;
@@ -29,6 +66,7 @@
     border-radius: 4px;
     box-sizing: border-box;
     cursor: pointer;
+
     &:hover {
       background-color: var(--common-hover-bg);
     }
