--- a/src/pages/PdfView/index.module.less
+++ b/src/pages/PdfView/index.module.less
@@ -2,26 +2,67 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   --pdf-grid-width: 100%;
+
   &.showEdit {
     --pdf-grid-width: 400px;
   }
+
+  .titlebar {
+    width: 100%;
+    height: 60px;
+    flex-shrink: 0;
+  }
+
+  .breadcrumb {
+    height: 60px;
+    padding-left: 40px;
+    display: flex;
+    align-items: center;
+
+    &.showIcon {
+      padding-left: 0;
+    }
+  }
+
+  .breadcrumbItem {
+    cursor: pointer;
+    transition: all 0.3s ease;
+    padding: 4px 8px;
+    border-radius: 4px;
+
+    &:hover {
+      background-color: var(--common-hover-bg);
+    }
+  }
+
+  .editContainer {
+    width: 100%;
+    flex: 1;
+    overflow: hidden;
+    display: flex;
+  }
+
   .gridContainer {
     display: flex;
     flex-wrap: wrap;
     width: var(--pdf-grid-width);
+    flex-shrink: 0;
     height: 100%;
     overflow-y: auto;
     padding: 40px;
     box-sizing: border-box;
     align-content: flex-start;
     transition: width 0.3s;
+
     &::-webkit-scrollbar {
       display: none;
     }
   }
+
   .edit {
-    width: calc(100% - var(--pdf-grid-width));
+    flex: 1;
     height: 100%;
     transition: width 0.3s;
   }
