--- a/src/pages/TimeRecordView/index.module.less
+++ b/src/pages/TimeRecordView/index.module.less
@@ -2,15 +2,49 @@
   width: 100%;
   height: 100%;
   display: flex;
+
   .sidebar {
     flex: none;
     width: 400px;
     height: 100%;
     background: var(--second-sidevar-background);
   }
-  .chart {
+
+  .chartContainer {
     flex: 1;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: hidden;
+  }
+
+  .chart {
+    width: 100%;
+    flex: 1;
     overflow-y: auto;
+    box-sizing: border-box;
+  }
+}
+
+.titlebar {
+  width: 100%;
+  height: 60px;
+  flex-shrink: 0;
+}
+
+.breadcrumb {
+  height: 60px;
+  padding-left: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumbItem {
+  cursor: pointer;
+  transition: all 0.3s ease;
+  padding: 4px 8px;
+  border-radius: 4px;
+
+  &:hover {
+    background-color: var(--common-hover-bg);
   }
 }
