--- a/src/pages/WhiteBoardView/index.module.less
+++ b/src/pages/WhiteBoardView/index.module.less
@@ -1,10 +1,19 @@
-.viewContainer {
+.container {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
+}
+
+.viewContainer {
+  flex: 1;
+  width: 100%;
+  display: flex;
   --white-board-grid-width: 100%;
+
   &.showEdit {
     --white-board-grid-width: 0px;
+
     .gridContainer {
       padding: 0;
     }
@@ -16,10 +25,11 @@
   height: 100%;
   display: flex;
   flex-wrap: wrap;
-  padding: 40px;
+  padding: 20px 40px 40px;
   align-content: flex-start;
   overflow-y: auto;
   box-sizing: border-box;
+
   &::-webkit-scrollbar {
     display: none;
   }
@@ -28,4 +38,28 @@
 .edit {
   width: calc(100% - var(--white-board-grid-width));
   height: 100%;
+}
+
+.titlebar {
+  width: 100%;
+  height: 60px;
+  flex-shrink: 0;
+}
+
+.breadcrumb {
+  height: 60px;
+  padding-left: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumbItem {
+  cursor: pointer;
+  transition: all 0.3s ease;
+  padding: 4px 8px;
+  border-radius: 4px;
+
+  &:hover {
+    background-color: var(--common-hover-bg);
+  }
 }
