fix: 窗口拖拽和信号灯位置修复

--- a/src/layouts/components/Titlebar/index.module.less
+++ b/src/layouts/components/Titlebar/index.module.less
@@ -6,6 +6,7 @@
   align-items: center;
   gap: 8px;
   justify-content: space-between;
+  -webkit-app-region: drag;
 
   &.sidebarHide {
     margin-left: 64px;
