--- a/src/pages/DocumentView/index.module.less
+++ b/src/pages/DocumentView/index.module.less
@@ -30,7 +30,7 @@
   padding-left: 40px;
   display: flex;
   align-items: center;
-
+  -webkit-app-region: no-drag;
   &.showIcon {
     padding-left: 0;
   }
