--- a/src/pages/ProjectView/index.module.less
+++ b/src/pages/ProjectView/index.module.less
@@ -36,10 +36,7 @@
   padding-left: 40px;
   display: flex;
   align-items: center;
-
-  &.showIcon {
-    padding-left: 0;
-  }
+  -webkit-app-region: no-drag;
 }
 
 .breadcrumbItem {
