--- a/src/layouts/ShortSidebarLayout/components/Sidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/Sidebar/index.module.less
@@ -5,57 +5,21 @@
   display: flex;
   flex-direction: column;
 
-  .header {
-    white-space: nowrap;
-    transition: opacity 0.2s;
-    opacity: 1;
-    flex: none;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 0.9em;
-    padding: 0 12px 0 20px;
-    height: 60px;
-    line-height: 32px;
-
-    &.indent {
-      margin-left: 72px;
-    }
-  }
-
   .list {
     padding: 6px 12px 12px 12px;
     flex: auto;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 8px;
 
     &::-webkit-scrollbar {
       display: none;
     }
 
-    .search {
-      height: 36px;
-      display: flex;
-      justify-content: space-between;
-      padding: 0 12px;
-      background: var(--search-bg);
-      border-radius: 8px;
-      align-items: center;
-      cursor: pointer;
-      margin-bottom: 8px;
-
-      &.dark {
-        background: var(--search-dark-bg);
-      }
-
-      kbd {
-        padding: 2px 4px;
-        border-radius: 4px;
-        font-size: 0.75em;
-        background: var(--search-kbd-bg);
-      }
+    &.isMac {
+      margin-top: 60px;
     }
   }
 
@@ -65,6 +29,7 @@
     flex: none;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: flex-end;
     gap: 8px;
   }
