--- a/src/pages/HomeView/index.module.less
+++ b/src/pages/HomeView/index.module.less
@@ -17,6 +17,7 @@
     padding-left: 24px;
     display: flex;
     align-items: center;
+    -webkit-app-region: no-drag;
   }
 
   .breadcrumbItem {
