--- a/src/pages/PdfView/index.module.less
+++ b/src/pages/PdfView/index.module.less
@@ -20,10 +20,7 @@
     padding-left: 40px;
     display: flex;
     align-items: center;
-
-    &.showIcon {
-      padding-left: 0;
-    }
+    -webkit-app-region: no-drag;
   }
 
   .breadcrumbItem {
