--- a/src/layouts/ShortSidebarLayout/components/Sidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/Sidebar/index.module.less
@@ -13,6 +13,7 @@
     flex-direction: column;
     align-items: center;
     gap: 8px;
+    margin-top: 6px;
 
     &::-webkit-scrollbar {
       display: none;
