--- a/src/pages/SingleMarkdownEditor/index.module.less
+++ b/src/pages/SingleMarkdownEditor/index.module.less
@@ -11,12 +11,18 @@
   }
 }
 
+.editorContainer {
+  flex: 1;
+  width: 100%;
+  overflow-y: auto;
+  box-sizing: border-box;
+}
+
 .sourceEditor,
 .editor {
   width: 100%;
-  height: 100%;
   box-sizing: border-box;
-  max-width: 720px;
+  max-width: min(100%, 720px);
   padding: 40px;
   margin: 0 auto;
   overflow: auto;
@@ -43,15 +49,8 @@
   height: 100%;
 }
 
-.container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-}
-
 .statusBar {
+  flex-shrink: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -61,11 +60,6 @@
   padding: 0 16px;
   font-size: 12px;
   color: #666;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 10;
 
   // 适应深色模式
   [data-theme="dark"] & {
