--- a/src/components/VideoNote/layouts/EditorSectionCard/index.module.less
+++ b/src/components/VideoNote/layouts/EditorSectionCard/index.module.less
@@ -47,7 +47,8 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  transition: all 0.2s ease;
+  transition: all 0.3s ease;
+  position: relative;
 
   &.activeEditor {
     border-color: var(--button-bg);
@@ -58,6 +59,12 @@
     opacity: 0.4;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
     border-color: var(--button-bg);
+  }
+
+  &.dropOver {
+    box-shadow: 0 0 5px var(--button-bg);
+    border-color: var(--button-bg);
+    transform: translateY(5px);
   }
 }
 
