--- a/src/components/VideoNote/layouts/SlideCardList/index.module.less
+++ b/src/components/VideoNote/layouts/SlideCardList/index.module.less
@@ -49,7 +49,6 @@
     margin: 0;
     font-size: 16px;
     font-weight: 600;
-    color: var(--text-color-primary);
   }
 
   .headerActions {
@@ -87,11 +86,15 @@
   flex-wrap: wrap;
   overflow-y: auto;
   box-sizing: border-box;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .addCardButton {
   width: 160px;
-  height: 136px;
+  height: 160px;
   border: 1px dashed var(--card-border);
   border-radius: 8px;
   display: flex;
